--- a/src/html/pages/contacts.html
+++ b/src/html/pages/contacts.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Контакты'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Контакты'})
 
 <body>
   @@include('components/business/_header.html')
@@ -104,7 +104,7 @@
                 Уфа, ул. Пушкина, д. 33/2,
                 блок А, 2 этаж, офис 201
               </span>
-              <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
@@ -115,7 +115,7 @@
                 Уфа, ул. Пушкина, д. 33/2,
                 блок А, 2 этаж, офис 201
               </span>
-              <span>Телефон: <a href="tel:+7 (347) 292-14-70" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
@@ -123,7 +123,7 @@
       </div>
     </section>
     <section class="questions">
-      <img src="@images/questions-bg.png"></img>
+      <img src="@images/questions-bg.png" alt="photo">
       <div class="container">
         <h2>Свяжитесь
           с экспертом</h2>
@@ -144,7 +144,7 @@
         <div class="form__row">
           <div class="form__privacy">
             Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green">обработку своих персональных данных</a>
+            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
           </div>
           @@include('components/ui/_button.html',
           {type: 'submit', class: 'btn_green',children:'отправить'})
