--- a/src/html/pages/documents.html
+++ b/src/html/pages/documents.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Лицензии и сертификаты'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Лицензии и сертификаты'})
 
 <body>
   @@include('components/business/_header.html')
@@ -27,22 +27,22 @@
         <div class="documents__licenses swiper-component swiper-component_secondary swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/license1.png">
+              <img src="@images/license1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/license2.png">
+              <img src="@images/license2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/license3.png">
+              <img src="@images/license3.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/license1.png">
+              <img src="@images/license1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/license2.png">
+              <img src="@images/license2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/license3.png">
+              <img src="@images/license3.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -51,28 +51,28 @@
         <div class="documents__certificates swiper-component swiper-component_secondary swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/certificate1.png">
+              <img src="@images/certificate1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate2.png">
+              <img src="@images/certificate2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate3.png">
+              <img src="@images/certificate3.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate4.png">
+              <img src="@images/certificate4.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate1.png">
+              <img src="@images/certificate1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate2.png">
+              <img src="@images/certificate2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate3.png">
+              <img src="@images/certificate3.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate4.png">
+              <img src="@images/certificate4.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -81,28 +81,28 @@
         <div class="documents__diplomas swiper-component swiper-component_secondary swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/diploma1.png">
+              <img src="@images/diploma1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma2.png">
+              <img src="@images/diploma2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma3.png">
+              <img src="@images/diploma3.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma4.png">
+              <img src="@images/diploma4.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma1.png">
+              <img src="@images/diploma1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma2.png">
+              <img src="@images/diploma2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma3.png">
+              <img src="@images/diploma3.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/diploma4.png">
+              <img src="@images/diploma4.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
