--- a/src/html/pages/history.html
+++ b/src/html/pages/history.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | 35 лет истории успеха'})
+@@include('meta/_head.html', {title: 'Форт Диалог | 35 лет истории успеха'})
 
 <body>
   @@include('components/business/_header.html')
@@ -18,7 +18,7 @@
             35 лет истории успеха
           </li>
         </ul>
-        <h1>форт диаолог 35 лет</h1>
+        <h1>форт Диалог 35 лет</h1>
       </div>
     </section>
     <section class="media-detail">
