--- a/src/html/pages/massmedia.html
+++ b/src/html/pages/massmedia.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | О нас в СМИ'})
+@@include('meta/_head.html', {title: 'Форт Диалог | О нас в СМИ'})
 
 <body>
   @@include('components/business/_header.html')
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="massmedia-section__cards">
           <div class="massmedia-card">
-            <img src="@images/rubezh.png">
+            <img src="@images/rubezh.png" alt="logo">
             <h3>RUБЕЖ и форт диалог</h3>
             <p>Журнал RUБЕЖ опросил крупнейших системных интеграторов о правилах игры в муниципальных проектах
               цифровизации и выяснил, какие платформы получили наиболее широкое распространение. Отвечает Тимур
@@ -33,14 +33,14 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/rashka.png">
+            <img src="@images/rashka.png" alt="logo">
             <h3>Мобильный кваториум</h3>
             <p>Компания Форт Диалог поставила в Республику Чувашия мобильный кванториум в рамках регионального проекта
               "Успех каждого ребенка" и нацпроекта "Образование"</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/sta.png">
+            <img src="@images/sta.png" alt="logo">
             <h3>Внедрение системы АСУ ТП</h3>
             <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
               катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
@@ -48,15 +48,14 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png">
+            <img src="@images/alexey.png" alt="logo">
             <h3>Совхоз Алексеевский</h3>
             <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
               теплицах совхоза "Алексеевский"</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
-
           <div class="massmedia-card">
-            <img src="@images/sta.png">
+            <img src="@images/sta.png" alt="logo">
             <h3>Внедрение системы АСУ ТП</h3>
             <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
               катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
@@ -64,7 +63,22 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png">
+            <img src="@images/alexey.png" alt="logo">
+            <h3>Совхоз Алексеевский</h3>
+            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+              теплицах совхоза "Алексеевский"</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/sta.png" alt="logo">
+            <h3>Внедрение системы АСУ ТП</h3>
+            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+            </p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/alexey.png" alt="logo">
             <h3>Совхоз Алексеевский</h3>
             <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
               теплицах совхоза "Алексеевский"</p>
