--- a/src/html/pages/news.html
+++ b/src/html/pages/news.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Новости'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Новости'})
 
 <body>
   @@include('components/business/_header.html')
