--- a/src/html/pages/partners.html
+++ b/src/html/pages/partners.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Партнеры'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Партнеры'})
 
 <body>
   @@include('components/business/_header.html')
@@ -29,7 +29,7 @@
     <section class="partners">
       <div class="container">
         <div class="partners__cards">
-          <div class="partners__card">
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/pantum.png" alt="logo">
             </div>
@@ -38,8 +38,8 @@
               <p>Являемся официальным дилером продукции Pantum International Limited в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -48,8 +48,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/aruba.png" alt="logo">
             </div>
@@ -58,8 +58,8 @@
               <p>Являемся квалифицированным партнером </p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -68,8 +68,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -78,8 +78,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/pantum.png" alt="logo">
             </div>
@@ -88,8 +88,8 @@
               <p>Являемся официальным дилером продукции Pantum International Limited в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -98,8 +98,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/pantum.png" alt="logo">
             </div>
@@ -108,8 +108,8 @@
               <p>Являемся официальным дилером продукции Pantum International Limited в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/pantum.png" alt="logo">
             </div>
@@ -118,8 +118,8 @@
               <p>Являемся официальным дилером продукции Pantum International Limited в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -128,8 +128,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/fellowes.png" alt="logo">
             </div>
@@ -138,8 +138,8 @@
               <p>Являемся официальным дилером продукции Fellowes Brands в Российской Федерации</p>
               <span>Разработка</span>
             </div>
-          </div>
-          <div class="partners__card">
+          </a>
+          <a href="#" class="partners__card">
             <div class="partners__card-image">
               <img src="@images/aruba.png" alt="logo">
             </div>
@@ -148,7 +148,7 @@
               <p>Являемся квалифицированным партнером </p>
               <span>Разработка</span>
             </div>
-          </div>
+          </a>
         </div>
         @@include('components/ui/_pagination.html')
       </div>
