--- a/src/html/pages/privacy.html
+++ b/src/html/pages/privacy.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Политика конфиденциаольности'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Политика конфиденциаольности'})
 
 <body>
   @@include('components/business/_header.html')
