--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Детальная проекта'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Детальная проекта'})
 
 <body>
   @@include('components/business/_header.html')
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="task__result">
-            <ul class="list">
+            <ul>
               <li>Оснащение лаборатории в кабинете химии;</li>
               <li>Потолочная автоматическая система электроснабжения в кабинете физики;</li>
               <li>Кухонная техника Bosch и более 20 швейно-вышивальных машин в кабинете технологии для девочек;</li>
@@ -77,16 +77,16 @@
         <div class="task__swiper swiper-component swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/univercity.png">
+              <img src="@images/univercity.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/hall.png">
+              <img src="@images/hall.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/univercity.png">
+              <img src="@images/univercity.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/hall.png">
+              <img src="@images/hall.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -94,7 +94,7 @@
       </div>
 
     </section>
-    <section class="projects-section">
+    <section class="projects-section projects-section_no-padding">
       <div class="container">
         <h2>Другие проекты</h2>
       </div>
@@ -102,7 +102,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -111,7 +111,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-2.png">
+              <img src="@images/project-2.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -122,7 +122,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -149,17 +149,17 @@
       </div>
       <div class="solutions-section__content">
         <div class="solutions-section__video">
-          <video autoplay muted loop src="@videos/sample-5s.mp4"></video>
+          <video autoplay muted loop src="@videos/sample-5s.mp4" alt="video"></video>
         </div>
         <div class="solutions-section__list">
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Интеллектуальная транспортная система «Курсор»</h3>
             <p>Создать системы безопасности для котельных</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -167,13 +167,13 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
@@ -194,7 +194,9 @@
       <div class="services-section__swiper swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Монтажные и пусконаладочные работы</h3>
             <p>Компания Форт Диалог предлагает комплексный подход к решению задач любой сложности на любом этапе проекта
               - от стадии формирования задачи, инженерных изысканий или проектирования до этапа поставок, монтажа и
@@ -202,13 +204,17 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Bim</h3>
             <p>Информационное моделирование здания или информационная модель здания.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>отдел проектной атрибуции (ОПД)</h3>
             <p>Отдел проектной дистрибуции (ОПД)  АО «Форт Диалог» выступает в качестве «Поставщика» по следующим видам
               продукции:
@@ -219,14 +225,18 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Инженерные изыскания</h3>
             <p>Данный вид исследований позволяет получить полный спектр данных о районе предполагаемой застройки, на
               основе которых, можно подготовить качественную проектную документацию в короткие сроки.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>проектирование</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности, что дает заказчику возможность существенно сэкономить время и ресурсы.</p>
@@ -234,9 +244,9 @@
           </div>
         </div>
         <div class="swiper-pagination swiper-pagination_white "></div>
-        @@include('components/ui/_button-link.html',
-        {href:'#', class: 'btn_secondary btn_secondary_white',children:'все услуги'})
       </div>
+      @@include('components/ui/_button-link.html',
+      {href:'#', class: 'btn_secondary btn_secondary_white services-section__button',children:'все услуги'})
     </section>
   </main>
   @@include('components/business/_footer.html')
