--- a/src/html/pages/service-detail.html
+++ b/src/html/pages/service-detail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Детальная услуги'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Детальная услуги'})
 
 <body>
   @@include('components/business/_header.html')
@@ -19,14 +19,13 @@
           </li>
         </ul>
         <h1>Инженерные изыскания</h1>
-        <div class="btn btn_secondary btn_secondary_white">
+        <a href="#questions" class="btn btn_secondary btn_secondary_white">
           <span class="children">
             Оставить заявку
           </span>
-        </div>
+        </a>
       </div>
     </section>
-
     <section class="service-detail">
       <div class="container">
         <h2>
@@ -148,7 +147,9 @@
       <div class="services-section__swiper swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Монтажные и пусконаладочные работы</h3>
             <p>Компания Форт Диалог предлагает комплексный подход к решению задач любой сложности на любом этапе проекта
               - от стадии формирования задачи, инженерных изысканий или проектирования до этапа поставок, монтажа и
@@ -156,13 +157,17 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Bim</h3>
             <p>Информационное моделирование здания или информационная модель здания.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>отдел проектной атрибуции (ОПД)</h3>
             <p>Отдел проектной дистрибуции (ОПД)  АО «Форт Диалог» выступает в качестве «Поставщика» по следующим видам
               продукции:
@@ -173,14 +178,18 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>Инженерные изыскания</h3>
             <p>Данный вид исследований позволяет получить полный спектр данных о районе предполагаемой застройки, на
               основе которых, можно подготовить качественную проектную документацию в короткие сроки.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__image" src="@images/service-bg.png">
+            <div class="service-card__image">
+              <img src="@images/service-bg.png" alt="photo">
+            </div>
             <h3>проектирование</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности, что дает заказчику возможность существенно сэкономить время и ресурсы.</p>
@@ -188,9 +197,9 @@
           </div>
         </div>
         <div class="swiper-pagination swiper-pagination_white "></div>
-        @@include('components/ui/_button-link.html',
-        {href:'#', class: 'btn_secondary btn_secondary_white',children:'все услуги'})
       </div>
+      @@include('components/ui/_button-link.html',
+      {href:'#', class: 'btn_secondary btn_secondary_white services-section__button',children:'все услуги'})
     </section>
     <section class="solutions-section">
       <div class="container">
@@ -206,13 +215,13 @@
         </div>
         <div class="solutions-section__list">
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Интеллектуальная транспортная система «Курсор»</h3>
             <p>Создать системы безопасности для котельных</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -220,13 +229,13 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__image" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png" alt="photo">
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
@@ -243,7 +252,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -252,7 +261,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-2.png">
+              <img src="@images/project-2.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -263,7 +272,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -280,8 +289,8 @@
       @@include('components/ui/_button-link.html',
       {href:'#', class: 'btn_secondary',children:'все проекты'})
     </section>
-    <section class="questions">
-      <img src="@images/questions-bg.png"></img>
+    <section class="questions" id="questions">
+      <img src="@images/questions-bg.png" alt="photo">
       <div class="container">
         <h2>Свяжитесь
           с экспертом</h2>
@@ -302,7 +311,7 @@
         <div class="form__row">
           <div class="form__privacy">
             Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green">обработку своих персональных данных</a>
+            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
           </div>
           @@include('components/ui/_button.html',
           {type: 'submit', class: 'btn_green',children:'отправить'})
