--- a/src/html/pages/success-page.html
+++ b/src/html/pages/success-page.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог'})
+@@include('meta/_head.html', {title: 'Форт Диалог'})
 
 <body class="lock">
 	@@include('components/business/_header.html')
@@ -277,7 +277,7 @@
 				<div class="form__row">
 					<div class="form__privacy">
 						Отправляя форму, вы даете свое согласие
-						на <a href="#" class="link link_green">обработку своих персональных данных</a>
+						на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
 					</div>
 					@@include('components/ui/_button.html',
 					{type: 'submit', class: '',children:'отправить'})
@@ -380,7 +380,7 @@
 				<div class="form__row">
 					<div class="form__privacy">
 						Отправляя форму, вы даете свое согласие
-						на <a href="#" class="link link_green">обработку своих персональных данных</a>
+						на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
 					</div>
 					@@include('components/ui/_button.html',
 					{type: 'submit', class: 'btn_green',children:'отправить'})
