--- a/src/html/pages/about-company.html
+++ b/src/html/pages/about-company.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | О компании'})
+@@include('meta/_head.html', {title: 'Форт Диалог | О компании'})
 
 <body>
   @@include('components/business/_header.html')
@@ -118,12 +118,15 @@
         </div>
       </div>
     </section>
-    <section class="projects-section projects-section_secondary">
+    <section class="projects-section">
+      <div class="container">
+        <h2>Проекты</h2>
+      </div>
       <div class="projects-section__swiper swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -132,7 +135,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-2.png">
+              <img src="@images/project-2.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -143,7 +146,7 @@
           </div>
           <div class="swiper-slide project-card">
             <div class="project-card__image">
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -157,6 +160,8 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
+      @@include('components/ui/_button-link.html',
+      {href:'#', class: 'btn_secondary',children:'все проекты'})
     </section>
     <section class="career-section career-section_secondary">
       <video autoplay muted loop src="@videos/career-bg.mp4"></video>
@@ -188,7 +193,7 @@
         <div class="form__row">
           <div class="form__privacy">
             Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green">обработку своих персональных данных</a>
+            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
           </div>
           @@include('components/ui/_button.html',
           {type: 'submit', class: '',children:'отправить'})
