--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Проекты'})
+@@include('meta/_head.html', {title: 'Форт Диалог | Проекты'})
 
 <body>
   @@include('components/business/_header.html')
@@ -22,6 +22,9 @@
             <b>&#x25BE;</b>
           </div>
           <ul class="dropdown__options">
+            <li class="dropdown__option">
+              <a href="#">Все отрасли</a>
+            </li>
             <li class="dropdown__option">
               <a href="#">Здравоохранение</a>
             </li>
@@ -90,7 +93,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Образование</div>
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -100,7 +103,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Медицина</div>
-              <img src="@images/project-2.png">
+              <img src="@images/project-2.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -112,7 +115,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Промышленность</div>
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -126,7 +129,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Образование</div>
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -136,7 +139,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Медицина</div>
-              <img src="@images/project-2.png">
+              <img src="@images/project-2.png" alt="photo">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
@@ -148,7 +151,7 @@
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Промышленность</div>
-              <img src="@images/project-1.png">
+              <img src="@images/project-1.png" alt="photo">
             </div>
             <h3>Полное технологическое</h3>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
